blocks/elements/elements.css
@import url('./__container/elements__container.css');

.elements {
  width: 882px;
  min-height: 744px;
}

@media screen and (max-width: 768px) {
 .elements {
    width: 884px;
    min-height: 628px;
 } 
}

@media screen and (max-width: 320px) {
  .elements {
    width: 282px;
    min-height: 2268px;
  }
}

